[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "pandas>=3.0.1",
    "python-telegram-bot>=22.6",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "ta>=0.11.0",
    "telegram>=0.0.1",
]
