[project]
name = "crypto-trading-bot"
version = "0.1.0"
description = "Telegram crypto trading assistant bot"
requires-python = ">=3.10"

dependencies = [
    "python-telegram-bot==20.7",
    "requests",
    "flask"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
